# BSP-OT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
apps/: advection_splatting.cpp  barycenters.cpp  bijections.cpp  color_transfer.cpp  general_coupling.cpp  manifold_sampling.cpp  multi_marginals.cpp  partial_transport.cpp  persistance_diagrams_matching.cpp  scale_rigid_registration.cpp  stippling.cpp
cmake/: CMakeLists.txt  TinyEngine.cmake  dgtal.cmake  slope.cmake  spectra-bckp.cmake
common/: KD_Tree.h  SpectraWrapper.h  Tensor.h  UniformSampleNBall.h  bvh_wrapper.cpp  bvh_wrapper.h  discrete_OT_solver.h  grid2D.h  halton.hpp  point_cloud_io.cpp  point_cloud_io.h  sampler.h  sampling.h  sparse_matrix_io.h  types.h  utils.h
data/diagrams/: isabel32.pts  isabel48.pts
src/: BSPOT.h  BSPOTWrapper.h  BijectiveBSPMatching.h  BijectiveMatching.cpp  BijectiveMatching.h  GeneralBSPMatching.h  InjectiveMatching.cpp  InjectiveMatching.h  PartialBSPMatching.h  PointCloudIO.h  cloudutils.cpp  cloudutils.h  coupling.cpp  coupling.h  data_structures.cpp  data_structures.h  plot.h  sampling.h  sliced.cpp  sliced.h
src_images/: compose.py  format_paintings.py  image_as_measure.cpp  image_as_measure.h  load_image.h  read_colors.py  type.hpp
src_meshes/: Mesh.h  MeshSampling.cpp  MeshSampling.h  SpectralEmbedding.cpp  SpectralEmbedding.h
